	  the menu. This results in the browser launching much
	  faster.
	- Icons added for 'Update' menu items, as well for Prefs
	  and Quit.
	- Browser command now accepts switches to the browser,
	  and %s can be used to pass the URL to the browser as
	  well. (Dan Lenski)
	- List of feeds in the Preferences is now sortable.

0.1.9
	- No more empty child processes left behind by browser fork.

0.2.0
	- Saves a feeds state, so feeds stay marked as read between
	  sessions.
	- Marks new articles with a solid dot and unread articles
	  with a hollow dot.
	- Menu marks feeds with new articles with bold text.
	- Feed properties are editable
	- Able to enable/disable all feeds by clicking the column header
	- Support for Atom feeds added.
	- Tray icon notifies you if there are new items in the menu
	- Tray icon has a tooltip with number of new items
	- Right-clicking the icon brings up a seperate menu with
	  preferences, about, and quit. Left-click brings up a menu
	  with the feeds.

0.2.1
	- Feed state stored more often and more consistantly
	- Error icon shown in menu if feed fails to download or parse
	- Online and offline mode added

0.2.2
	- A few Online/Offline mode fixeds
	- Username/Password option added to feeds
	- OPML importing added
	- Fixed bug that was leaving zombie processes after browsers were
	  closed
	- il8n support added

0.3.0~prelease
	- Apply patches from Debian up to v0.2.2-9:
	  Adjust makefile, German translations, code injection fix, timeout for waitpid, keep new state across update, identify also by title, atom feeds opening.
	- Remove dangerous chmods in make install target.
	- Replace Atom parser with a more correct XML::LibXML implementation, to fix various Atom parsing bugs.
	- Do downloads asynchronously and in parallel using AnyEvent::HTTP instead of using Gnome VFS.
	- Only re-download feeds if they have changed since the last download, using the If-Modified-Since header.
	- Fix favicon downloads uing the wrong URL on HTTPS domains.