@@ -4,6 +4,7 @@ Original Author: Lee Aylward <lee@laylward.com>
 This is a fork of the original (v0.2.2) from http://yarssr.sf.net with the following changes:
 * Apply patches from Debian up to v0.2.2-9
 * Remove dangerous chmods in make install target.
+* Fix make uninstall target leaving locale files behind, and not using DESTDIR.
 * Replace Atom parser with a more correct XML::LibXML implementation, to fix various Atom parsing bugs.
 * Do downloads asynchronously and in parallel using AnyEvent::HTTP instead of using Gnome VFS.
 * Only re-download feeds if they have changed since the last download, using the If-Modified-Since header.
