@@ -70,6 +70,7 @@
 	- Apply patches from Debian up to v0.2.2-9:
 	  Adjust makefile, German translations, code injection fix, timeout for waitpid, keep new state across update, identify also by title, atom feeds opening.
 	- Remove dangerous chmods in make install target.
+	- Fix make uninstall target leaving locale files behind, and not using DESTDIR.
 	- Replace Atom parser with a more correct XML::LibXML implementation, to fix various Atom parsing bugs.
 	- Do downloads asynchronously and in parallel using AnyEvent::HTTP instead of using Gnome VFS.
 	- Only re-download feeds if they have changed since the last download, using the If-Modified-Since header.
